2011-05-16  Naoki Takano  <takano.naoki@gmail.com>

Reviewed by Kent Tamura.

        HTML5 Number Spinbox displays a 0 in situations where a 0 is not between the min and max.
        https://bugs.webkit.org/show_bug.cgi?id=60871

        * fast/forms/input-stepup-stepdown-from-renderer-expected.txt: Added expected results.
        * fast/forms/script-tests/input-stepup-stepdown-from-renderer.js: Added test patterns when initial values are empty.
2011-05-16  Naoki Takano  <takano.naoki@gmail.com>

        Reviewed by Kent Tamura.

        HTML5 Number Spinbox displays a 0 in situations where a 0 is not between the min and max.
        https://bugs.webkit.org/show_bug.cgi?id=60871

        Test: fast/forms/input-stepup-stepdown-from-renderer.html

        In number input type, if the value is not a number, including empty, the currect valued is assumed 0.
        But we have to handle it separately from the case when the value is actuall "0".

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::stepUpFromRenderer): Added cliping for default value.

Canonical link: https://commits.webkit.org/76300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86650 268f45cc-cd09-0410-ab3c-d52691b4dbfc